# You

./: README.md  build.bat  dev.bat  index.html  install.bat  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: generate-icon.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Gateway.tsx  Landing.tsx  PdfViewer.tsx  Sanctuary.tsx  Settings.tsx  VoiceMode.tsx
src/core/: memory.ts  providers.ts  soul.ts  voice.ts
src/store/: index.ts
